# parity

./: Cargo.toml
dapps/: Cargo.toml
dapps/src/: lib.rs  url.rs
dapps/src/api/: api.rs  ipfs.rs  mod.rs
dapps/src/router/: mod.rs
ethcore/src/account_provider/: mod.rs
ethcore/src/client/: client.rs
hw/: Cargo.toml
hw/src/: ledger.rs  lib.rs
ipfs/: Cargo.toml
ipfs/src/: lib.rs
parity/: main.rs  run.rs
rpc/src/v1/helpers/: dispatch.rs  errors.rs
rpc/src/v1/impls/: eth_filter.rs
util/network/: Cargo.toml
util/network/src/: handshake.rs  host.rs
