[package]
description = "Parity IPFS crate"
name = "ethcore-ipfs"
version = "1.6.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = "../ethcore" }
hyper = { default-features = false, git = "https://github.com/ethcore/hyper" }
cid = "~0.1.2"
try_from = "~0.2.1"
